--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <title>  Сайт про поезда! </title>
+    <title>  Поездатые! </title>
     <body style="background-color: #cf1d1d"> 
      <header>   <h1>  Привет! Тут ты узнаешь про: Поезда, как они работают, компоненты, и типы поездов, и про железную дорога </h1> </header> <h2> Вот вам две фотки поездов: </h2>
     
@@ -300,7 +300,8 @@
 Скорость в режиме длительном — 53,6 км/ч;
 Использование длительного режима с коэффициентом — не менее 0,84.
 Электровозы типа ВЛ80 эксплуатируется в настоящее время: На Белорусской, Казахской, Горьковской, Дальневосточной, Забайкальской, Западно-Сибирской, Московской, Красноярской, Октябрьской, Приволжской, Северной, Южно-Уральской, Узбекской железных дорогах. </p>
-
+<img src="https://cs11.pikabu.ru/post_img/2020/03/21/10/og_og_1584808271286529815.jpg" width="640px" height="800">
+        <img src="https://railgallery.pp.ua/uploads/images/2024/02/28/244759713.jpg" width="640px" height="800">
 
     </body>
 </html>
